--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
 	</head>
 	<body>
 	
-		<script src="./project1/sample.js"></script>	
+		<script src="./classes/class.js"></script>	
 	</body>
 </html>
