--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 	<body>
 		<script>
 			SystemJS.config({
-				baseURL: '/modules',
-				defaultExtension: true
+				"baseURL": '/modules',
+				"defaultJSExtensions": true
 			});
 			SystemJS.import('app.js');
 		</script>	
